Added append menu response type to openapi. Implemented businesswb AppendMenuItem
