# api/openapi/business.yml
@@ -178,8 +178,12 @@ paths:
             schema:
               $ref: "#/components/schemas/MenuItem"
       responses:
-        "204":
+        "201":
           description: Menu item appended
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AppendMenuItemResponse"
   /business/{businessId}/menuitems/{name}:
     delete:
       description: Delete a menuitem given its name
@@ -297,3 +301,8 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/MenuItem"
+    AppendMenuItemResponse:
+      type: object
+      properties:
+        image:
+          type: string
